Add academic experience

--- a/About.html
+++ b/About.html
@@ -360,7 +360,45 @@ div.tocify {
 
 <div id="academic-experience" class="section level2">
 <h2>Academic Experience</h2>
-<hr />
+<p><strong>Evaluation of Efficacy and Safety of Tranexamic Acid in
+Preventing Postpartum Hemorrhage</strong> <span
+style="float:right">Chengdu, China</span><br />
+<em>Research Assistant, West China School of Pharmacy, Sichuan
+University</em> <span style="float:right"><em>Dec 2019 - May
+2020</em></span></p>
+<ul>
+<li>Searched Chinese and English databases to screen randomized
+controlled trials of tranexamic acid preventing postpartum hemorrhage,
+and used the Cochrane risk bias assessment tool to evaluate the quality
+of the included literature</li>
+<li>Extracted required data on postpartum hemorrhage and tranexamic acid
+usage and performed Meta-analysis using Revman5.3 and R to
+quantitatively analyze whether the combined effect values of multiple
+similar studies were statistically significant</li>
+<li>According to the evidence of analysis, concluded that tranexamic
+acid had a certain effectiveness and safety in preventing postpartum
+hemorrhage, providing basis for clinical medication and medical
+decision-making</li>
+</ul>
+<p><strong>Analysis of the Cause of Uterotonics Ineffectiveness in
+Postpartum Hemorrhage </strong> <span style="float:right">Chengdu,
+China</span><br />
+<em>Research Assistant, West China Second University Hospital</em> <span
+style="float:right"><em>Jul 2019 - Oct 2019</em></span></p>
+<ul>
+<li>Retrieved postpartum hemorrhage cases between June 2018 and May 2019
+and their diagnosis descriptions from patient database of West China
+Second Hospital</li>
+<li>Took the use of surgical methods (uterine binding, hysterectomy,
+etc.) to treat hemorrhage during delivery as the feature of uterotonics
+insensitivity, identified age, delivery mode, gestational age, parity,
+scarred uterus, polyhydramnios, placenta previa, etc. as potential
+high-risk factors, used SAS to perform logistic regression analysis to
+determine significant predictors</li>
+<li>Constructed a predictive model for uterotonics insensitivity in
+patients with postpartum hemorrhage, and conducted model diagnostics and
+validation</li>
+</ul>
 </div>
 <div id="professional-experience" class="section level2">
 <h2>Professional Experience</h2>
@@ -369,32 +407,31 @@ style="float:right">Shanghai, China</span><br />
 <em>Statistical Programming Intern</em> <span
 style="float:right"><em>Jun 2022 - Aug 2022</em></span></p>
 <ul>
-<li><p>Engaged in a Phase I study to evaluate the bioequivalence and
+<li>Engaged in a Phase I study to evaluate the bioequivalence and
 tolerability of the drug in healthy male subjects and assisted teams in
-the delivery of statistical programming deliverables <br></p></li>
-<li><p>Generated datasets (SDTM, ADaM), tables, listings, and figures
-using SAS and CDARS under the guidance of Clinical Data Interchange
-Standards Consortium (CDISC) and Pfizer standards, and provided
-supportive QC work to ensure appropriate documentation for the
-deliverables</p></li>
+the delivery of statistical programming deliverables <br></li>
+<li>Generated datasets (SDTM, ADaM), tables, listings, and figures using
+SAS and CDARS under the guidance of Clinical Data Interchange Standards
+Consortium (CDISC) and Pfizer standards, and provided supportive QC work
+to ensure appropriate documentation for the deliverables</li>
 </ul>
 <p><strong>Ipsos (China) Consulting Co., Ltd</strong><span
 style="float:right">Shanghai, China</span><br />
 <em>Healthcare Consulting Intern</em><span style="float:right"><em>May
 2020 - Jun 2021</em></span></p>
 <ul>
-<li><p>Deeply participated in 8 healthcare consulting projects with
+<li>Deeply participated in 8 healthcare consulting projects with
 pharmaceutical and medical device companies to determine market access,
 market size calculation, and competitor project analysis for drugs and
-medical devices</p></li>
-<li><p>Retrieved industry information through multiple platforms such as
+medical devices</li>
+<li>Retrieved industry information through multiple platforms such as
 literature and databases, proficient in using Excel (v-lookup function,
 pivot table, thinkcell, etc.) for quantitative data analysis and
-visualization, and completed project delivery slides</p></li>
-<li><p>Designed interview questionnaires, participated in 10 - 20 expert
+visualization, and completed project delivery slides</li>
+<li>Designed interview questionnaires, participated in 10 - 20 expert
 interviews per project, with competitor clients and physicians and
 summarized notes and insights related to prescription choice, future
-trends and unmet clinical needs in medical industry</p></li>
+trends and unmet clinical needs in medical industry</li>
 </ul>
 </div>
 
