All website items including index, about me page

--- a/About.html
+++ b/About.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About.knit</title>
+<title>About Me</title>
 
 <script src="site_libs/header-attrs-2.16/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -331,7 +331,7 @@ div.tocify {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="about.html">About</a>
+  <a href="about.html">About me</a>
 </li>
 <li>
   <a href="mailto:&lt;yifeixu0306@gmail.com&gt;">
@@ -340,8 +340,14 @@ div.tocify {
   </a>
 </li>
 <li>
-  <a href="http://github.com/&lt;yifeixu0306&gt;/">
+  <a href="http://github.com/yifeixu0306/">
     <span class="fa fa-github fa-lg"></span>
+     
+  </a>
+</li>
+<li>
+  <a href="https://www.linkedin.com/in/yifei-xu-6190b6228/">
+    <span class="fa fa-linkedin fa-lg"></span>
      
   </a>
 </li>
@@ -354,10 +360,15 @@ div.tocify {
 
 
 
+<h1 class="title toc-ignore">About Me</h1>
 
 </div>
 
 
+<style>
+    body {
+    font-size: 11.5pt}
+</style>
 <div id="academic-experience" class="section level2">
 <h2>Academic Experience</h2>
 <p><strong>Evaluation of Efficacy and Safety of Tranexamic Acid in
@@ -399,6 +410,7 @@ determine significant predictors</li>
 patients with postpartum hemorrhage, and conducted model diagnostics and
 validation</li>
 </ul>
+<hr />
 </div>
 <div id="professional-experience" class="section level2">
 <h2>Professional Experience</h2>
