--- a/index.html
+++ b/index.html
@@ -291,14 +291,14 @@ $(document).ready(function () {
 
 <style>
     body {
-    background: url('background.JPG');
+    background: url("images/background.JPG");
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    }
+    font-size: 12pt}
 </style>
-<p><img src="me.JPG" style = "width:55%"/></p>
+<p><img src="images/me.JPG" style = "width:50%"/></p>
 <p><strong>Welcome to my website!</strong></p>
 <hr />
 <div id="about-me" class="section level1">
@@ -309,7 +309,7 @@ my B.S. in Pharmaceutical Science from Sichuan University.</p>
 <p>My research interests focus on the statistical analysis for
 longitudinal data, especially in the area of infection and
 psychiatry.</p>
-<p>I enjoy watching disney movies and playing tennis. My favorite player
+<p>I enjoy watching Disney movies and playing tennis. My favorite player
 is <a href="https://twitter.com/rogerfederer?lang=en">Roger
 Federer</a>!</p>
 <p>Learn more about me from <a href="About.html">here</a>!</p>
