Update .html after correcting the typo

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ $(document).ready(function () {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="about.html">About me</a>
+  <a href="About.html">About me</a>
 </li>
 <li>
   <a href="mailto:&lt;yifeixu0306@gmail.com&gt;">
