Change the name of "About" to "about"

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ $(document).ready(function () {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="About.html">About me</a>
+  <a href="about.html">About me</a>
 </li>
 <li>
   <a href="mailto:&lt;yifeixu0306@gmail.com&gt;">
@@ -312,7 +312,7 @@ psychiatry.</p>
 <p>I enjoy watching Disney movies and playing tennis. My favorite player
 is <a href="https://twitter.com/rogerfederer?lang=en">Roger
 Federer</a>!</p>
-<p>Learn more about me from <a href="About.html">here</a>!</p>
+<p>Learn more about me from <a href="about.html">here</a>!</p>
 <hr />
 </div>
 <div id="contact" class="section level1">
