--- a/About.html
+++ b/About.html
@@ -331,7 +331,7 @@ div.tocify {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="About.html">About me</a>
+  <a href="about.html">About me</a>
 </li>
 <li>
   <a href="mailto:&lt;yifeixu0306@gmail.com&gt;">
