Modify the comment in .Rmd

--- a/index.html
+++ b/index.html
@@ -258,6 +258,9 @@ $(document).ready(function () {
   <a href="about.html">About me</a>
 </li>
 <li>
+  <a href="dashboard.html">Dashboard</a>
+</li>
+<li>
   <a href="mailto:&lt;yifeixu0306@gmail.com&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
