Change the lengend order of the line plot

--- a/about.html
+++ b/about.html
@@ -365,6 +365,21 @@ div.tocify {
     body {
     font-size: 11.5pt}
 </style>
+<p><br></p>
+<div id="education" class="section level2">
+<h2>Education</h2>
+<p><strong>Columbia University, Mailman School of Public Health</strong>
+<span style="float:right">New York, NY</span><br />
+<em>Master of Science, Biostatistics</em> <span
+style="float:right"><em>May 2023</em></span></p>
+<p><strong>Sichuan University</strong> <span
+style="float:right">Chengdu, China</span><br />
+<em>Bachelor of Science, Major: Pharmaceutical Science</em> <span
+style="float:right"><em>Jun 2020</em></span><br />
+<em>Bachelor of Management, Minor: Business Administration</em> <span
+style="float:right"><em>Jun 2020</em></span></p>
+<hr />
+</div>
 <div id="academic-experience" class="section level2">
 <h2>Academic Experience</h2>
 <p><strong>Evaluation of Efficacy and Safety of Tranexamic Acid in
@@ -441,6 +456,14 @@ interviews per project, with competitor clients and physicians and
 summarized notes and insights related to prescription choice, future
 trends and unmet clinical needs in medical industry</li>
 </ul>
+<hr />
+</div>
+<div id="skills" class="section level2">
+<h2>Skills</h2>
+<p><strong>Computer Skills</strong>: Microsoft Office Suite, R, SAS
+(Advance Certification), SQL, SPSS<br />
+<strong>Language Skills</strong>: Mandarin (native), English
+(proficient)</p>
 </div>
 
 
